--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
   	<link rel="stylesheet" type="text/css" href="estilo.css">
-    <title> PINK FLOYD </title>
+    <title> clinica camis </title>
 </head>
 <body>
     
@@ -15,7 +15,7 @@
     <main>
       <nav>
         <ul>
-          <li><a href="./youtubelinks/youtubelinks_index.html"> YOUTUBE LINKS </a></li>
+          <li><a href="./youtubelinks/index.html"> YOUTUBE LINKS </a></li>
           <li><a href="./pylink/pyindex.html"> Python </a></li>
           <li><a href="#"> Web Programação </a></li>
         </ul>
