--- a/youtubelinks/youtubelinks_index.html
+++ b/youtubelinks/youtubelinks_index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="./youtubelinks/index_youtubelinks.html"> YOUTUBE LINKS </a></li>
           <li><a href="./pylink/pyindex.html"> Python </a></li>
-          <li><a href="..index.html" Home</a></li>
+          <li><a href="../index.html" Home</a></li>
         </ul>
       </nav>
 
