--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <nav>
         <ul>
-          <li><a href="./youtubelinks/index.html"> YOUTUBE LINKS </a></li>
+          <li><a href="./youtubelinks/youtubelinks_index.html"> YOUTUBE LINKS </a></li>
           <li><a href="./pylink/pyindex.html"> Python </a></li>
           <li><a href="#"> Web Programação </a></li>
         </ul>
