--- a/youtubelinks/youtubelinks_index.html
+++ b/youtubelinks/youtubelinks_index.html
@@ -26,10 +26,10 @@
             src="https://www.youtube.com/embed/tgbNymZ7vqY">
        <table>
            <tr>
-               <th> Alimentação </th>
-               <th> banho </th>
-               <th> sinais de doença </th>
-               <th> Quais vacinas seu cão deve tomar </th>
+               <th> Medicina e saúde </th>
+               <th> banho e toza </th>
+               <th> outlet </th>
+               <th> outros pets </th>
            </tr>
            <tr>
                <td> camis </td>
