--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li><a href="./youtubelinks/youtubelinks_index.html"> Medicina e saúde </a></li>
           <li><a href="./pylink/pyindex.html"> Python </a></li>
-          <li><a href="#"> Web Programação </a></li>
+          <li><a href="#"> outlet </a></li>
         </ul>
       </nav>
 
@@ -33,7 +33,7 @@
     </main>
      
     <footer>
-      Copyright © 2023 vet. camis
+       vet. camis
     </footer>
 </body>
 </html>
