--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <header>
       <h1 align="center">Clinica veterinária</h1>
-      <p align ="center">EVOLUÇÃO COGNITIVA</p>
+      <p align ="center">O melhor para o seu pet</p>
     </header>
     
     <main>
