--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a href="./youtubelinks/youtubelinks_index.html"> Medicina e saúde </a></li>
-          <li><a href="./pylink/pyindex.html"> Python </a></li>
+          <li><a href="./pylink/pyindex.html"> Banho e tosa </a></li>
           <li><a href="#"> outlet </a></li>
         </ul>
       </nav>
