--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     </main>
      
     <footer>
+    <nav>
+        <ul>
+            <li> <button type="button"> Botao 1 </button></li>
+            <li> <button type="button"> Botao 2 </button></li>
+        </ul>
+    </nav>
        vet. camis
     </footer>
 </body>
