--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     </main>
      
     <footer>
+        <script>
+            function muda_cor(){
+                document.getElementById("principal").style.backgroudcolor="red"
+        </script>
     <nav>
         <ul>
             <li> <button type="button"> Botao 1 </button></li>
