--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <nav>
       	<p>
-         <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.pngtree.com%2Ffreepng%2Fvector-logo-for-veterinary-clinic-logo-for-a-pet-shop-logo-for-veterinary-services_5092525.html&psig=AOvVaw0dQhRq0QDOWyqP6TtYy6f8&ust=1687547988376000&source=images&cd=vfe&ved=0CA4QjRxqFwoTCPDE5rjM1_8CFQAAAAAdAAAAABAE"
+         <img src="1.png"
         </p>
       </nav>
        
