--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <nav>
       	<p>
-         <img src="1.png" widhr="400" height="200">
+         <img src="1.png" width="400" height="200"><br
         </p>
       </nav>
        
