--- a/index.html
+++ b/index.html
@@ -40,9 +40,18 @@
         </script>
     <nav>
         <ul>
-            <li> <button type="button"> Botao 1 </button></li>
-            <li> <button type="button"> Botao 2 </button></li>
+            <li> <button id="tema1button">tema 1</button> </li>
+            <li> <button id="tema2button">tema 2</button> </li>
         </ul>
+        <script>
+            const changeColorButton2 = document.getElementById('tema2button');
+            // Adiciona evento de listener ao botao 
+            changeColorButton2.addEventListener('click',() => {
+                // Muda a cor de fundo
+                document.body.style.backgroudColor = 'red' ;
+                document.header.style.backgroudColor = 'red';
+            });
+        </script>
     </nav>
        vet. camis
     </footer>
