--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
             <li> <button id="tema1button">tema 1</button> </li>
             <li> <button id="tema2button">tema 2</button> </li>
         </ul>
+        
         <script>
             const changeColorButton2 = document.getElementById('tema2button');
             // Adiciona evento de listener ao botao 
             changeColorButton2.addEventListener('click',() => {
                 // Muda a cor de fundo
-                document.body.style.backgroudColor = 'red' ;
-                document.header.style.backgroudColor = 'red';
+                document.body.style.backgroudColor = 'black' ;
+                document.header.style.backgroudColor = 'black';
             });
         </script>
     </nav>
