--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li><a href="./youtubelinks/youtubelinks_index.html"> Medicina e saúde </a></li>
           <li><a href="./pylink/pyindex.html"> Banho e tosa </a></li>
           <li><a href="#"> outlet </a></li>
+          <li><a href="./link/index_link.html"> LINK </a></li>
         </ul>
       </nav>
 
