--- a/index.html
+++ b/index.html
@@ -48,11 +48,18 @@
         <script>
             const changeColorButton2 = document.getElementById('tema2button');
             // Adiciona evento de listener ao botao 
-            changeColorButton2.addEventListener('click',() => {
+            changeColorButton2.addEventListener('click', () => {
                 // Muda a cor de fundo
                 document.body.style.backgroudColor = 'black' ;
                 document.header.style.backgroudColor = 'black';
             });
+             const changeColorButton1 = document.getElementById('tema1button');
+            // Adiciona evento de listener ao botao 
+            changeColorButton1.addEventListener('click', () => {
+                // Muda a cor de fundo
+                document.body.style.backgroudColor = 'White' ;
+                document.header.style.backgroudColor = 'White';
+            })
         </script>
     </nav>
        vet. camis
