--- a/index.html
+++ b/index.html
@@ -28,17 +28,10 @@
         </p>
       </nav>
        
-      <p> 
-      https://htmlpreview.github.io/?https://github.com/rodrigoxal/ProfXavierWeb/blob/main/index.html <br>
-      </p>
     </main>
      
     <footer>
-        <script>
-            function muda_cor(){
-                document.getElementById("principal").style.backgroudcolor="red"
-                      }
-        </script>
+
     <nav>
         <ul>
             <li> <button id="tema1button">tema 1</button> </li>
@@ -50,7 +43,7 @@
             // Adiciona evento de listener ao botao 
             changeColorButton2.addEventListener('click', () => {
                 // Muda a cor de fundo
-                document.body.style.backgroudColor = 'black' ;
+                document.body.style.backgroudColor = 'red' ;
                 document.header.style.backgroudColor = 'black';
             });
              const changeColorButton1 = document.getElementById('tema1button');
@@ -62,7 +55,7 @@
             })
         </script>
     </nav>
-       vet. camis
+       Vet. Camis
     </footer>
 </body>
 </html>
