--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
   	<link rel="stylesheet" type="text/css" href="estilo.css">
-    <title> clinica camis </title>
+    <title> Patinhas felizes-vet </title>
 </head>
 <body> 
     
@@ -15,7 +15,7 @@
     <main>
       <nav>
         <ul>
-          <li><a href="./youtubelinks/youtubelinks_index.html"> Medicina e saúde </a></li>
+          <li><a href="#">Uma vida mais longa para o seu filho de quatro patas< Medicina e saúde </a></li>
           <li><a href="./pylink/pyindex.html"> Banho e tosa </a></li>
           <li><a href="#"> outlet </a></li>
           <li><a href="./link/index_link.html"> LINK </a></li>
