--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <main>
       <nav>
         <ul>
-          <li><a href="#">Uma vida mais longa para o seu filho de quatro patas< Medicina e saúde </a></li>
-          <li><a href="./pylink/pyindex.html"> Banho e tosa </a></li>
+          <li><a href="#"> Medicina e saúde </a></li>
+          <li><a href="#"> Banho e tosa </a></li>
           <li><a href="#"> outlet </a></li>
-          <li><a href="./link/index_link.html"> LINK </a></li>
         </ul>
       </nav>
 
