--- a/medicina_e_saude.html
+++ b/medicina_e_saude.html
@@ -9,13 +9,13 @@
     
     <header>
       <h1 align="center">Medicina e saúde</h1>
-      <p align ="center"></p>
+      <p align ="center">uma vida mais longa e feliz para seu filho de quatro patas</p>
     </header>
     
     <main>
       <nav>
         <ul>
-          <li><a href="#"> Banho e tosa> YOUTUBE LINKS </a></li>
+          <li><a href="#"> Banho e tosa></a></li>
           <li><a href="#"> Home </a></li>
           </ul>
        </nav>
