--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
       <nav>
         <ul>
-          <li><a href="#"> Medicina e saúde </a>black</li>
+          <li><a href="#"> Medicina e saúde </a></li>
           <li><a href="#"> Banho e tosa </a></li>
           <li><a href="#"> outlet </a></li>
         </ul>
