--- a/layout.html
+++ b/layout.html
@@ -7,17 +7,28 @@ div{
   padding: 15px;
 }
   .div1 {
+    float: left;
     background: red;
+    height: 500px;
+    width: 75%;
 }
   .div2 {
+    float: left;
     background: yellow;
+    height: 500px;
+    width: 75%;
 }
   .div3 {
+    clear:left;
     background: green;
+    height: 300px;
 }
   </style>
   </head>
   <body>
+    <header>
+  <h2>caixas de conteúdo</h2>
+    </header>
 
     <h2>Caixas de conteúdo</h2>
 
