--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body> 
     
     <header>
-      <h1 align="center">Clinica veterinária</h1>
-      <p align ="center">O melhor para o seu pet</p> 
+      <h1 align="center" color="white">Clinica veterinária</h1>
+      <p align ="center" color="white">O melhor para o seu pet</p> 
     </header>
     
     <main>
