--- a/imagens/index_imagens.html
+++ b/imagens/index_imagens.html
@@ -23,7 +23,7 @@
 
       <nav>
       	<p>
-         <img src="xavier.png" alt="Prof. Xavier" width="90" height="120"><br>
+         <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.petz.com.br%2Fblog%2Fcachorros%2Fpor-que-cachorro-nao-gosta-de-gato%2F&psig=AOvVaw2cBPY2zdy3LXZ3rLAJjRir&ust=1700244027395000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCPDUmN-MyYIDFQAAAAAdAAAAABAJ"><br>
         </p>
       </nav>
        
