--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-  <link rel="stylesheet" type="text/css" href="estilo.css">  
+        <link rel="stylesheet" type="text/css" href="estilo.css">  
     <title>Clinica veterinária</title>
 </head>
 <body>
@@ -23,8 +23,8 @@
       </nav>
 
       <nav>
-      <p>
-         <img src="imagem estética.png" alt="MARCA" widht="450" height="300"><br>          
+        <p>
+         <img src="1.png" alt="MARCA" widht="450" height="300"><br>          
         </p>
       </nav>
        
