--- a/layout_float.html
+++ b/layout_float.html
@@ -1,100 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>CSS Template</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-* {
-  box-sizing: border-box;
-}
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-\a
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 30px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
 
-/* Create two columns/boxes that floats next to each other */
-nav {
-  float: left;
-  width: 30%;
-  height: 300px; /* only for demonstration, should be removed */
-  background: #ccc;
-  padding: 20px;
-}
 
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
+  .div1 {
+    float: left;
+    background: red;
+    height: 500px;
+    width: 30%; 
   }
-}
-</style>
-</head>
-<body>
+   .div2 {
+     float: left;
+     background: green;
+     height:500px;
+     width: 70%;
+   }
+    .div3 {
+      clear: left;
+      background: purple;
+      height: 500px;
+  }
+  </style>
+  </head>
 
-<header>
-  <h2>Cities</h2>
-</header>
+  <body>
+  <h2> caixas de conteúdos </h2>
 
-<section>
-  <nav>
-    <ul>
-      <li><a href="#">London</a></li>
-      <li><a href="#">Paris</a></li>
-      <li><a href="#">Tokyo</a></li>
-    </ul>
-  </nav>
- 
-  <article>
-    <h1>London</h1>
-    <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  </article>
-</section>
+  <p> caixas de conteúdos umas ao lado das outras</p>
 
-<footer>
-  <p>Footer</p>
-</footer>
-
+  <div class="div1">div1</div>
+  <div class="div2">div2</div>
+  <div class="div3">div3</div>
+    
 </body>
 </html>
+  
+
+  
+ 
+
+  
+ 
+  
 
