--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <main id = "principal">
       <nav>
         <ul>
-          <li><a href="#"> Medicina e saúde </a></li>
-          <li><a href="./youtubelinks/youindex.html"> Banho e tosa </a></li>    
-          <li><a href="../youtubelinks/youindex.html"> outlet </a></li>
+          <li><a href="./medicina_e_saude.html"> Medicina e saúde </a></li>
+          <li><a href="./banho_e_tosa.html"> Banho e tosa </a></li>    
+          <li><a href="./layout.html"> outlet </a></li>
         </ul>
       </nav>
 
