--- a/medicina_e_saude.html
+++ b/medicina_e_saude.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-  	<link rel="stylesheet" type="text/css" href="medsau.css">
+  	<link rel="stylesheet" type="text/css" href="mdsau.css">
     <title>patinhas felizes-vet</title>
 </head>
 <body>
